--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ nodes_origin: ""
 links_origin: ""
 nodes_online: ""
 links_online: ""
-images_origin: ""
+images_origin: "data/images/"
 export_target: "export"
 history: true
 focus_max: 2
@@ -27,9 +27,9 @@ graph_arrows: true
 node_size_method: degree
 node_size: 10
 node_size_max: 20
-node_size_min: 2
+node_size_min: 3
 attraction_force: 200
-attraction_distance_max: 250
+attraction_distance_max: 350
 attraction_vertical: 0
 attraction_horizontal: 0
 views: {}
