--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ links_origin: ""
 nodes_online: ""
 links_online: ""
 images_origin: "data/images/"
-export_target: "export"
+export_target: "./export/"
 history: true
 focus_max: 2
 record_types:
@@ -18,7 +18,6 @@ link_types:
     color: "#e1e1e1"
 references_as_nodes: false
 references_type_label: references
-record_filters: []
 graph_background_color: "#ffffff"
 graph_highlight_color: "#ff6a6a"
 graph_highlight_on_hover: true
@@ -33,18 +32,21 @@ attraction_distance_max: 350
 attraction_vertical: 0
 attraction_horizontal: 0
 views: {}
-record_metas: []
+record_metas: [group]
+record_filters:
+  - meta: group
+    value: dubious
 generate_id: always
 link_context: tooltip
 hide_id_from_record_header: false
-title: ""
-author: ""
+title: "Comment être visible sur le web en tant que chercheur/chercheuse"
+author: "Damien Belvèze"
 description: ""
 keywords: []
 link_symbol: ""
-csl: ""
-bibliography: ""
+csl: "apa.csl"
+bibliography: "./biblio/Cosma.bib"
 csl_locale: ""
 css_custom: ""
 devtools: false
-lang: en
+lang: fr
